--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@langchain/community": "^1.0.0",
+    "@langchain/core": "^1.0.2",
     "@langchain/google-genai": "^1.0.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
+    "langchain": "^1.0.2",
     "lucide-react": "^0.545.0",
     "next": "16.0.0",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.394",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "styled-components": "^6.1.19"
